Fix glyphicon spacing in button.

--- a/client/stylesheets/frattendance.import.less
+++ b/client/stylesheets/frattendance.import.less
@@ -44,3 +44,8 @@ body {
 .navbar-brand {
     color: darkred !important;
 }
+
+.btn-glyphicon {
+    top: 2px;
+    right: 1px;
+}
